--- a/packages/slate-drop-or-paste-images/package.json
+++ b/packages/slate-drop-or-paste-images/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "slate-drop-or-paste-images",
+  "name": "@axioscode/slate-drop-or-paste-images",
   "description": "A Slate plugin that inserts images on drop or paste.",
-  "version": "0.9.1",
+  "version": "0.9.1-alpha",
   "license": "MIT",
   "repository": "git://github.com/ianstormtaylor/slate-plugins.git",
   "main": "lib/slate-drop-or-paste-images.js",
