--- a/packages/slate-paste-linkify/package.json
+++ b/packages/slate-paste-linkify/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "slate-paste-linkify",
+  "name": "@axioscode/slate-paste-linkify",
   "description": "A Slate plugin that wraps a selection in an inline link element when a URL is pasted from the clipboard.",
   "version": "0.7.0",
   "license": "MIT",
