--- a/packages/slate-auto-replace/package.json
+++ b/packages/slate-auto-replace/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "slate-auto-replace",
+  "name": "@axioscode/slate-auto-replace",
   "description": "A Slate plugin to automatically transform certain input.",
   "version": "0.12.1",
   "license": "MIT",
