--- a/packages/slate-auto-replace/package.json
+++ b/packages/slate-auto-replace/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@axioscode/slate-auto-replace",
   "description": "A Slate plugin to automatically transform certain input.",
-  "version": "0.12.1",
+  "version": "0.12.1-alpha",
   "license": "MIT",
   "repository": "git://github.com/ianstormtaylor/slate-plugins.git",
   "main": "lib/slate-auto-replace.js",
