--- a/packages/slate-soft-break/package.json
+++ b/packages/slate-soft-break/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@axioscode/slate-soft-break",
   "description": "A Slate plugin to add soft breaks on return.",
-  "version": "0.9.0",
+  "version": "0.9.0-alpha",
   "license": "MIT",
   "repository": "git://github.com/ianstormtaylor/slate-plugins.git",
   "main": "lib/slate-soft-break.js",
