--- a/packages/slate-collapse-on-escape/package.json
+++ b/packages/slate-collapse-on-escape/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "slate-collapse-on-escape",
+  "name": "@axioscode/slate-collapse-on-escape",
   "description": "A Slate plugin that simply collapses the selection on escape.",
-  "version": "0.8.1",
+  "version": "0.8.1-alpha",
   "license": "MIT",
   "repository": "git://github.com/ianstormtaylor/slate-plugins.git",
   "main": "lib/slate-collapse-on-escape.js",
