--- a/packages/slate-when/package.json
+++ b/packages/slate-when/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@axioscode/slate-when",
   "description": "A Slate plugin to restrict another plugin to a condition.",
-  "version": "0.2.0-alpha",
+  "version": "0.2.0",
   "license": "MIT",
   "repository": "git://github.com/ianstormtaylor/slate-plugins.git",
   "main": "lib/slate-when.js",
