--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "version": "final",
+  "version": "0.1.0",
   "name": "slate-plugins",
   "workspaces": [
     "packages/*"
